module(
    name = "engflowapis",
    version = "2025.05.25-19.07.40",  # Automatically updated by release pipeline.
)

bazel_dep(
    name = "rules_proto",
    version = "6.0.2",
)
bazel_dep(
    name = "protobuf",
    version = "28.2",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20240819-fe8ba054a",
    repo_name = "com_google_googleapis",
)
