module(
    name = "engflowapis",
    version = "HEAD",  # Automatically updated by release pipeline.
)

bazel_dep(
    name = "googleapis",
    version = "0.0.0-20240819-fe8ba054a",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "package_metadata",
    version = "0.0.3",
)
bazel_dep(
    name = "protobuf",
    version = "28.2",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_proto",
    version = "6.0.2",
)
