module(
    name = "engflowapis_java",
    version = "HEAD",  # Automatically updated by release pipeline.
)

bazel_dep(
    name = "engflowapis",
    version = "HEAD",  # Automatically updated by release pipeline.
)
bazel_dep(
    name = "grpc-java",
    version = "1.67.1",
)
bazel_dep(
    name = "protobuf",
    version = "28.2",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_java",
    version = "8.7.0",
)

local_path_override(
    module_name = "engflowapis",
    path = "..",
)
